--- a/web/frontend/modules/financial-reports/project-summary/views/projects-month-report.tpl.html
+++ b/web/frontend/modules/financial-reports/project-summary/views/projects-month-report.tpl.html
@@ -8,7 +8,7 @@ var types = _(view.getSpendingTypes());
         <%types.each(function(type){%>
         <th><%=type%></th>
         <%});%>
-        <th>Итого</th>
+        <th><%=i18n.total%></th>
     </tr>
     </thead>
     <tbody>
