--- a/web/frontend/modules/financial-reports/regional-year/views/regional-report.tpl.html
+++ b/web/frontend/modules/financial-reports/regional-year/views/regional-report.tpl.html
@@ -1,5 +1,5 @@
 <div class="tab-header">
-    Годовой отчет по региону: <%=app.collection('regions').get(view.options.id)%> [<%=view.options.year%>]
+    <%=i18n.regionalTitle%>: <%=app.collection('regions').get(view.options.id)%> [<%=view.options.year%>]
 
     <div class="pull-right" style="margin-right: 10px; margin-top: -1px;">
         <div class="btn-group">
