--- a/web/frontend/modules/financial-reports/regional-year/views/regional.tpl.html
+++ b/web/frontend/modules/financial-reports/regional-year/views/regional.tpl.html
@@ -1,6 +1,6 @@
 <div class="box j-report">
     <%if(!_(view.options.id).isUndefined()){%>
-        <div class="padded">Загрузка...</div>
+        <div class="padded"><%=_i18n.actions.loading%>...</div>
     <%}else{%>
         <div class="padded">
             <div class="big-button-bar">
