--- a/web/frontend/modules/financial-reports/views/list.tpl.html
+++ b/web/frontend/modules/financial-reports/views/list.tpl.html
@@ -1,9 +1,9 @@
 <div class="box">
     <div class="tab-header">
-        Box title
+        TODO
     </div>
 
     <div>
-        <div class="padded">Понятия не имею что тут будет</div>
+        <div class="padded">TODO</div>
     </div>
 </div>
