--- a/web/frontend/modules/financial-reports/fot/views/fot.tpl.html
+++ b/web/frontend/modules/financial-reports/fot/views/fot.tpl.html
@@ -1,6 +1,6 @@
 <div class="box">
     <div class="tab-header">
-        ФОТ <%=view.options.year%>
+        <%=i18n.wageTitle%> <%=view.options.year%>
 
         <div class="pull-right" style="margin-right: 10px; margin-top: -1px;">
             <div class="btn-group">
