--- a/web/frontend/modules/report-involvement/views/byProject.tpl.html
+++ b/web/frontend/modules/report-involvement/views/byProject.tpl.html
@@ -6,7 +6,7 @@ var occupations = app.collection('occupations');
 
 <div class="box">
 
-    <div class="tab-header">Занятость персонала по проектам</div>
+    <div class="tab-header"><%=i18n.perProjectTitle%></div>
 
     <div class="row-fluid">
             <div class="span9">
@@ -16,7 +16,7 @@ var occupations = app.collection('occupations');
 
                     <div class="b-project j-toggle-project-details" style="margin-bottom: 25px; padding-bottom: 25px; border-bottom: 1px solid #ccc">
                         <div class="b-project__title">
-                            <div class="b-project__title-text">Свободные сотрудники</div>
+                            <div class="b-project__title-text"><%=i18n.freeEmployees%></div>
                         </div>
                         <div class="b-project__details">
                             <ul class="b-roles b-list b-list_content_roles">
@@ -119,7 +119,7 @@ var occupations = app.collection('occupations');
             </div>
             <div class="span3">
                 <div class="prepend-transparent" style="margin-top:4px;">
-                    <span class="add-on button"><i class="icon-search"></i></span><input class="span11 input-transparent j-filter-projects"  id="prependedInput" size="16" type="text" placeholder="Поиск проекта">
+                    <span class="add-on button"><i class="icon-search"></i></span><input class="span11 input-transparent j-filter-projects"  id="prependedInput" size="16" type="text" placeholder="<%=i18n.projectSearch%>">
                 </div>
             </div>
         </div>
