--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -21,6 +21,7 @@
         <div class="login-wrapper" style="margin-top: 120px">
             <div style="text-align: center">
                 <i class="icon-money logo-icon"></i>
+                <h2 style="margin-top: -10px; color:white">Checkman</h2>
             </div>
 
             <div id="login-manager">
@@ -40,6 +41,9 @@
                 <div class="inner-well" style="text-align: center; margin: 20px 0;">
                     <a href="#" id="register-link" class="button mini rounded gray"><i class="icon-plus"></i> Register</a>
                     <a href="#" id="forgot-link" class="button mini rounded gray"><i class="icon-question-sign"></i> Forgot Password?</a>
+                </div>
+                <div class="inner-well" style="text-align: center; margin: 20px 0; color: white">
+                    <p style="margin:0"><b>Demo login:</b> Admin | <b>Demo password:</b> Admin</p>
                 </div>
             </div>
         </div>
