Hide register and forgot pass links

--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -38,10 +38,10 @@
                     </form>
                 </div>
 
-                <div class="inner-well" style="text-align: center; margin: 20px 0;">
-                    <a href="#" id="register-link" class="button mini rounded gray"><i class="icon-plus"></i> Register</a>
-                    <a href="#" id="forgot-link" class="button mini rounded gray"><i class="icon-question-sign"></i> Forgot Password?</a>
-                </div>
+                {#<div class="inner-well" style="text-align: center; margin: 20px 0;">#}
+                    {#<a href="#" id="register-link" class="button mini rounded gray"><i class="icon-plus"></i> Register</a>#}
+                    {#<a href="#" id="forgot-link" class="button mini rounded gray"><i class="icon-question-sign"></i> Forgot Password?</a>#}
+                {#</div>#}
                 <div class="inner-well" style="text-align: center; margin: 20px 0; color: white">
                     <p style="margin:0"><b>Demo login:</b> Admin | <b>Demo password:</b> Admin</p>
                 </div>
