Project overall stats, minor reports refactoring

--- a/src/Checkman/ApplicationBundle/Resources/views/Default/index.html.twig
+++ b/src/Checkman/ApplicationBundle/Resources/views/Default/index.html.twig
@@ -63,6 +63,9 @@
                 },
                 "modules/financial-reports/project-month/project-month-details-collection": {
                     url: "{{ path("api_v1_reports_project_month_detail", {"projectId": ":id", "year": ":year", "month": ":month"}) }}"
+                },
+                "modules/financial-reports/project-summary/project-overall.model": {
+                    url: "{{ path("api_v1_reports_project_overall", {"projectId": ":id"}) }}"
                 }
             }
         };
