--- a/web/frontend/modules/financial-reports/project-summary/views/projects.tpl.html
+++ b/web/frontend/modules/financial-reports/project-summary/views/projects.tpl.html
@@ -17,13 +17,12 @@
     <div>
         <div class="row-fluid">
             <div class="span9">
+                <div class="padded a-report-overall-stats" style="margin-bottom: -25px; padding-bottom: 0"><%=_i18n.actions.loading%></div>
                 <div class="padded">
+                    <h4><%=view.options.year%></h4>
                     <div id="graph_placeholder" style="width:100%; height: 400px;"></div>
                 </div>
-
-                <div class="padded j-report-by-type">
-
-                </div>
+                <div class="padded a-report-by-type"><%=_i18n.actions.loading%></div>
             </div>
             <div class="span3">
                 <div class="padded">
