--- a/web/frontend/modules/employee/views/edit/edit.tpl.html
+++ b/web/frontend/modules/employee/views/edit/edit.tpl.html
@@ -12,7 +12,7 @@ fields.push(key);
     </div>
     <div class="modal-body separator">
 <%};%>
-<table class="table table-striped table-bordered box">
+<table class="table table-striped table-bordered box b-table">
     <%if(!view.options.drawAsWindow){%>
     <thead>
         <tr>
