--- a/web/frontend/modules/employee/views/show/project-history.tpl.html
+++ b/web/frontend/modules/employee/views/show/project-history.tpl.html
@@ -1,4 +1,4 @@
-<table class="table table-striped table-bordered box">
+<table class="table table-striped table-bordered box b-table">
     <thead>
         <tr>
             <th colspan="2"><%=i18n.projects%></th>
