--- a/web/frontend/modules/report-involvement/views/byProject.tpl.html
+++ b/web/frontend/modules/report-involvement/views/byProject.tpl.html
@@ -16,7 +16,7 @@ var occupations = app.collection('occupations');
 
                     <div class="b-project j-toggle-project-details" style="margin-bottom: 25px; padding-bottom: 25px; border-bottom: 1px solid #ccc">
                         <div class="b-project__title">
-                            <div class="b-project__title-text"><%=i18n.freeEmployees%></div>
+                            <div class="b-project__title-text"><i class="j-folder-icon icon-folder-close"></i> <%=i18n.freeEmployees%></div>
                         </div>
                         <div class="b-project__details">
                             <ul class="b-roles b-list b-list_content_roles">
@@ -57,7 +57,7 @@ var occupations = app.collection('occupations');
                     <%projects.each(function(project){%>
                     <div class="b-project j-toggle-project-details" data-title="<%=project%>">
                         <div class="b-project__title">
-                            <div class="b-project__title-text"><a class="j-nav" href="<%=project.linkTo("show")%>"><i class="icon-folder-close"></i></a> <%=project%></div>
+                            <div class="b-project__title-text"><i class="j-folder-icon icon-folder-close"></i> <%=project%> <a class="j-nav b-goto-edit" href="<%=project.linkTo("show")%>"><i class="icon-pencil"></i></a></div>
                         </div>
                         <div class="b-project__details">
                             <ul class="b-roles b-list b-list_content_roles">
